--- a/PolyEditor/Plugins/SubEditors/ResourceSubEditorPlugin/src/SubEditor/ResourceSubEditorWidget.ui
+++ b/PolyEditor/Plugins/SubEditors/ResourceSubEditorPlugin/src/SubEditor/ResourceSubEditorWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ResourceSubEditor</class>
- <widget class="QWidget" name="ResourceSubEditor">
+ <class>ResourceSubEditorWidget</class>
+ <widget class="QWidget" name="ResourceSubEditorWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
